@@ -8,6 +8,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #10772: ProgrammingError: operator does not exist: text = integer
  * #10829: Consider renaming 'Save' buttons to 'Apply changes'
  * fix access to account properties clean-up from user admin panel
+ * always show associated email in user details admin panel
 
  new features
  * #843: Make admin approval required for account registration
